# myLab

./: .gitignore  README.md  Timo.md
computer vision/: README.md  model_cam_to_proj_matrix.py  stitcher.ipynb
cpp/: README.md
cpp/katas/: README.md
cpp/katas/hello/: CMakeLists.txt  hello.cpp  hello.sublime-project  test_hello.cpp
cpp/katas/hello/src/: CMakeLists.txt  main.cpp
cpp/katas/tape_equilibrium/: CMakeLists.txt  README.md  main.sublime-project
cpp/katas/tape_equilibrium/src/: main.cpp
machine learning/: Linear Regression.ipynb  README.md  mnist-tensorflow.ipynb
machine learning/deep_learning/: AND_perceptron.ipynb  backpropagation.ipynb  backpropagation_simple.ipynb  forward_pass_4x3x2.ipynb  gradient_descent.ipynb  gradient_descent_one_step.ipynb  sigmoid.ipynb
machine learning/deep_learning/first-neural-network/: Your_first_neural_network.ipynb
machine learning/deepdream/: deepdream.ipynb
machine learning/deepdream/.ipynb_checkpoints/: deepdream-checkpoint.ipynb
machine learning/linear_regression/: Linear Regression.ipynb  linear_regression_bmi.ipynb  linear_regression_boston.ipynb  linear_regression_siraj_challenge.ipynb  linear_regression_sklearn.ipynb
python/: Preferences.sublime-settings  expand variables in a string.ipynb  playing_matplotlib.ipynb  playing_numpy.ipynb  playing_pandas.ipynb  playing_scikit.ipynb  settings.json
python/.ipynb_checkpoints/: keyboard-shortcuts-checkpoint.ipynb
python/fqueue/: fqueue.py  uploader.py
python/strings/: constants.py  string_enc.py
